# HojiChar

./: .codecov.yml  .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml  document.yaml  release.yaml  release_test.yaml
docs/: hojichar.html  index.html  search.js
docs/hojichar/: core.html  filters.html  utils.html
docs/hojichar/core/: async_composition.html  async_filter_interface.html  composition.html  filter_interface.html  inspection.html  models.html  parallel.html
docs/hojichar/filters/: deduplication.html  document_filters.html  language_identification.html  token_filters.html  tokenization.html
docs/hojichar/utils/: async_handlers.html  io_iter.html  load_compose.html  warn_deprecation.html
hojichar/: __init__.py  __main__.py  cli.py
hojichar/async_filters/: openai.py
hojichar/core/: __init__.py  async_composition.py  async_filter_interface.py  composition.py  filter_interface.py  inspection.py  models.py  parallel.py
hojichar/dict/: __init__.py  adult_keywords_en.txt  adult_keywords_ja.txt  advertisement_keywords_ja.txt  discrimination_keywords_ja.txt  dummy_ng_words.txt  header_footer_keywords_ja.txt  violence_keywords_ja.txt
hojichar/filters/: __init__.py  cleaners.py  deduplication.py  document_filters.py  language_identification.py  normalization.py  token_filters.py  tokenization.py
hojichar/utils/: __init__.py  async_handlers.py  io_iter.py  load_compose.py  process.py  warn_deprecation.py
tests/: test_cli.py  test_import.py  test_main.py  test_readme.py
tests/async_filters/: test_openai.py
tests/core/: test_async_composition.py  test_async_filter_interface.py  test_composition.py  test_filter_interface.py  test_models.py  test_paralle.py
tests/filters/: test_character_repetition_filter.py  test_deduplication.py  test_discard_too_many_ending_ellipsis.py  test_discard_too_many_nouns.py  test_discard_too_many_special_tokens.py  test_discard_too_short_lines.py  test_document_filters.py  test_language_identification.py  test_lsh_deduplication.py  test_mask_personal_information.py  test_ng_words.py  test_single_character_repetition_filter.py  test_tokenization.py  test_word_repetition_filter.py
tests/fixtures/: sample_args2_profile.py  sample_args_profile.py  sample_async_profile.py  sample_in_100.jsonl  sample_out_100.jsonl  sample_out_100_stderr.txt  sample_print_profile.py  sample_profile.py  sample_raises_profile.py
tests/utils/: test_async_handlers.py  test_io_iter.py  test_load_compose.py  test_process.py
tests/utils/mock_profiles/: mock_async_factory_0args.py  mock_factory_0args.py  mock_factory_2args.py  mock_factory_notimplemented.py  mock_factory_success.py  mock_filter_load_another_module.py  mock_filter_notimplemented.py  mock_filter_success.py  mock_filter_typeerror.py  mock_loading_verification.py
