[tool.poetry]
name = "hojichar"
version = "0.0.0"                                     # Versioning by git tag dinamically with https://github.com/mtkennerly/poetry-dynamic-versioning
description = "Text preprocessing management system."
license = "Apache-2.0"
authors = ["kenta.shinzato <hoppiece@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/HojiChar/HojiChar"
repository = "https://github.com/HojiChar/HojiChar"

[tool.poetry.scripts]
hojichar = "hojichar.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.17.0"
mmh3 = "^4.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
types-tqdm = "^4.65.0.2"


[tool.poetry.group.doc.dependencies]
pdoc = "^12.3.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.taskipy.tasks]
lint = "flake8 --show-source hojichar/ tests/ && isort --check-only --diff hojichar/ tests/"
format = "black hojichar/ tests/ && isort hojichar/ tests"
test = "pytest . --doctest-modules && mypy ."

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
